# config/urls.py
@@ -15,6 +15,7 @@ api_v1 = [
     path("", include("apps.catalog.urls")),
     path("", include("apps.booking.urls")),
     path("master/", include("apps.master.urls")),
+    path("referral/", include("apps.referral.urls")),
 ]
 
 urlpatterns = [
